--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,8 @@ dependencies {
     compile group: 'com.google.cloud', name: 'google-cloud-dlp', version: '0.100.0-beta'
     compile 'net.sourceforge.jtds:jtds:1.3.1'
     compile group: 'org.json', name: 'json', version: '20180813'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.2'
 
 
     compile('com.google.guava:guava:21.0'){
