yet one more try

--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -7,7 +7,7 @@ steps:
     dir: '$REPO_NAME'
     id: 'build-jar'
   - name: 'bash'
-    args: [ 'source', 'set_env.sh' ]
+    args: [ 'set_env.sh' ]
     dir: '$REPO_NAME/env-setup'
     id: 'setup-environment'
   - name: gcr.io/cloud-builders/gsutil
