--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -6,11 +6,11 @@ steps:
     args: [ 'assemble' ]
     dir: '$REPO_NAME'
     id: 'build-jar'
-  - name: 'gcr.io/cloud-builders/gcloud'
+  - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
     args: ['env-setup/set_env.sh']
     id: 'setup-environment'
-  - name: 'gcr.io/cloud-builders/gcloud'
+  - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
     args: ['echo _DATAFLOW_JAR_BUCKET = ${_DATAFLOW_JAR_BUCKET}']
     id : 'test2'
