--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -12,8 +12,8 @@ steps:
     id: 'setup-environment'
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
-    args: ['echo _DATAFLOW_JAR_BUCKET = ${_DATAFLOW_JAR_BUCKET}']
-    id : 'test2'
+    args: ['echo' , "_DATAFLOW_JAR_BUCKET  ${_DATAFLOW_JAR_BUCKET}"]
+    id : 'test'
   - name: gcr.io/cloud-builders/gsutil
     args: [ 'cp', '*.jar', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-builds/dlp-rdb-bq-import-dataflow.jar' ]
     dir: '$REPO_NAME/build/libs'
