--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -7,9 +7,9 @@ steps:
     dir: '$REPO_NAME'
     id: 'build-jar'
   - name: gcr.io/cloud-builders/gcloud
-    entrypoint: 'bash'
+    entrypoint: 'source'
     dir: '$REPO_NAME/env-setup'
-    args: ['bash' , './set_env.sh']
+    args: ['set_env.sh']
     id: 'setup-environment'
   - name: gcr.io/cloud-builders/gcloud
     arg: ['bash', "echo _DATAFLOW_JAR_BUCKET  ${_DATAFLOW_JAR_BUCKET}"]
