--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -1,3 +1,12 @@
+substitutions:
+  _GCP_PROJECT_ID: $(gcloud config list --format 'value(core.project)')
+  _PROJECT_NUMBER: $(gcloud projects describe "${GCP_PROJECT_ID}" --format='get(projectNumber)')
+  _DATAFLOW_JAR_BUCKET: "${GCP_PROJECT_ID}-artifacts"
+  _DATAFLOW_STAGING_BUCKET: "${GCP_PROJECT_ID}-artifacts-staging"
+  _COMPOSER_REGION: 'us-central1'
+  _COMPOSER_ZONE_ID: 'us-central1-a'
+  _COMPOSER_ENV_NAME: 'dlp-pipeline-composer'
+  _COMPOSER_DAG_NAME: 'db-import'
 steps:
   - name: gcr.io/cloud-builders/git
     args: [ 'clone', 'https://github.com/arwasanawadwala/dlp-rdb-bq-import.git' ]
@@ -6,14 +15,6 @@ steps:
     args: [ 'assemble' ]
     dir: '$REPO_NAME'
     id: 'build-jar'
-  - name: gcr.io/cloud-builders/gcloud
-    entrypoint: 'source'
-    dir: '$REPO_NAME/env-setup'
-    args: ['set_env.sh']
-    id: 'setup-environment'
-  - name: gcr.io/cloud-builders/gcloud
-    args: ['bash', "echo _DATAFLOW_JAR_BUCKET  ${_DATAFLOW_JAR_BUCKET}"]
-    id : 'test'
   - name: gcr.io/cloud-builders/gsutil
     args: [ 'cp', '*.jar', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-builds/dlp-rdb-bq-import-dataflow.jar' ]
     dir: '$REPO_NAME/build/libs'
