--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -1,6 +1,6 @@
 substitutions:
-  _DATAFLOW_JAR_BUCKET: "${_PROJECT_ID}-artifacts"
-  _DATAFLOW_STAGING_BUCKET: "${_PROJECT_ID}-artifacts-staging"
+  _DATAFLOW_JAR_BUCKET: "${PROJECT_ID}-artifacts"
+  _DATAFLOW_STAGING_BUCKET: "${PROJECT_ID}-artifacts-staging"
   _COMPOSER_REGION: 'us-central1'
   _COMPOSER_ZONE_ID: 'us-central1-a'
   _COMPOSER_ENV_NAME: 'dlp-pipeline-composer'
