--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -21,6 +21,10 @@ steps:
     args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}','variables', '--', '--set', 'dataflow_jar_file', 'dlp-rdb-bq-import-dataflow.jar' ]
     id: 'set-composer-jar-ref'
   - name: gcr.io/cloud-builders/gsutil
+    args: ['cp', 'db-import.py', '${_DATAFLOW_JAR_BUCKET}']
+    dir: '$REPO_NAME/workflow-dags'
+    id: 'deploy-processing-pipeline-old'
+  - name: gcr.io/cloud-builders/gsutil
     args: [ 'cp', 'workflow-dags/*', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
     dir: '$REPO_NAME'
     id: 'deploy-processing-pipeline'
