--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -22,7 +22,7 @@ steps:
     id: 'set-composer-jar-ref'
   - name: gcr.io/cloud-builders/gsutil
     args: ['cp', 'database_import.py', '${_DATAFLOW_JAR_BUCKET}']
-    dir: '$REPO_NAME/workflow-dags'
+    dir: '$REPO_NAME'
     id: 'deploy-processing-pipeline-old'
   - name: gcr.io/cloud-builders/gsutil
     args: [ 'cp', 'workflow-dags/*', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
