--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -20,10 +20,10 @@ steps:
   - name: gcr.io/cloud-builders/gcloud
     args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}','variables', '--', '--set', 'dataflow_jar_file', 'dlp-rdb-bq-import-dataflow.jar' ]
     id: 'set-composer-jar-ref'
-  - name: gcr.io/cloud-builders/gsutil
-    args: ['cp', 'data-pipeline-test.py', 'gs://${_DATAFLOW_JAR_BUCKET}']
-    dir: '$REPO_NAME'
-    id: 'deploy-processing-pipeline-old'
+#  - name: gcr.io/cloud-builders/gsutil
+#    args: ['cp', 'data-pipeline-test.py', 'gs://${_DATAFLOW_JAR_BUCKET}']
+#    dir: '$REPO_NAME'
+#    id: 'deploy-processing-pipeline-old'
   - name: gcr.io/cloud-builders/gsutil
     args: [ 'cp', 'workflow-dags/*', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
     dir: '$REPO_NAME'
