--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -25,8 +25,12 @@ steps:
 #    dir: '$REPO_NAME'
 #    id: 'deploy-processing-pipeline-old'
   - name: gcr.io/cloud-builders/gsutil
-    args: [ 'cp', 'workflow-dags/*', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
+    args: [ 'ls -ltr']
     dir: '$REPO_NAME'
+    id: 'list-dir'
+  - name: gcr.io/cloud-builders/gsutil
+    args: [ 'cp', '*.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
+    dir: '$REPO_NAME/workflow-dags'
     id: 'deploy-processing-pipeline'
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
