--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -24,10 +24,16 @@ steps:
 #    args: ['cp', 'data-pipeline-test.py', 'gs://${_DATAFLOW_JAR_BUCKET}']
 #    dir: '$REPO_NAME'
 #    id: 'deploy-processing-pipeline-old'
-  - name: gcr.io/cloud-builders/gsutil
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: 'bash'
     args: [ 'ls -ltr']
     dir: '$REPO_NAME'
     id: 'list-dir'
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: 'bash'
+    args: [ 'ls -ltr']
+    dir: '$REPO_NAME/workflow-dags'
+    id: 'list-sub-dir'
   - name: gcr.io/cloud-builders/gsutil
     args: [ 'cp', '*.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
     dir: '$REPO_NAME/workflow-dags'
