--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -9,44 +9,49 @@ steps:
   - name: gcr.io/cloud-builders/git
     args: [ 'clone', 'https://github.com/arwasanawadwala/dlp-rdb-bq-import.git' ]
     id: 'check-out-source-code'
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: 'bash'
+    args: ['cat', 'data-pipeline-test.py']
+    dir: '$REPO_NAME/workflow-dags'
+    id: 'print file'
   - name: gcr.io/cloud-builders/gsutil
-    args: ['cp', 'data-pipeline-test.py', 'gs://${_DATAFLOW_JAR_BUCKET}']
+    args: ['cp', 'data-pipeline-test.py', 'gs://${_DATAFLOW_JAR_BUCKET}/data-pipeline-test.py']
     dir: '$REPO_NAME/workflow-dags'
     id: 'deploy-processing-pipeline-old'
-  - name: gcr.io/cloud-builders/gradle:5.6.2-jdk-8
-    args: [ 'assemble' ]
-    dir: '$REPO_NAME'
-    id: 'build-jar'
-  - name: gcr.io/cloud-builders/gsutil
-    args: [ 'cp', '*.jar', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-builds/dlp-rdb-bq-import-dataflow.jar' ]
-    dir: '$REPO_NAME/build/libs'
-    id: 'copy-jar'
-  - name: gcr.io/cloud-builders/gcloud
-    args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}','variables', '--', '--set', 'dataflow_jar_file', 'dlp-rdb-bq-import-dataflow.jar' ]
-    id: 'set-composer-jar-ref'
+#  - name: gcr.io/cloud-builders/gradle:5.6.2-jdk-8
+#    args: [ 'assemble' ]
+#    dir: '$REPO_NAME'
+#    id: 'build-jar'
+#  - name: gcr.io/cloud-builders/gsutil
+#    args: [ 'cp', '*.jar', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-builds/dlp-rdb-bq-import-dataflow.jar' ]
+#    dir: '$REPO_NAME/build/libs'
+#    id: 'copy-jar'
+#  - name: gcr.io/cloud-builders/gcloud
+#    args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}','variables', '--', '--set', 'dataflow_jar_file', 'dlp-rdb-bq-import-dataflow.jar' ]
+#    id: 'set-composer-jar-ref'
 #  - name: gcr.io/cloud-builders/gsutil
 #    args: ['cp', 'data-pipeline-test.py', 'gs://${_DATAFLOW_JAR_BUCKET}']
 #    dir: '$REPO_NAME'
 #    id: 'deploy-processing-pipeline-old'
-  - name: gcr.io/cloud-builders/gcloud
-    entrypoint: 'bash'
-    args: [ 'ls -ltr']
-    dir: '$REPO_NAME'
-    id: 'list-dir'
-  - name: gcr.io/cloud-builders/gcloud
-    entrypoint: 'bash'
-    args: [ 'ls -ltr']
-    dir: '$REPO_NAME/workflow-dags'
-    id: 'list-sub-dir'
-  - name: gcr.io/cloud-builders/gsutil
-    args: [ 'cp', '*.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
-    dir: '$REPO_NAME/workflow-dags'
-    id: 'deploy-processing-pipeline'
-  - name: gcr.io/cloud-builders/gcloud
-    entrypoint: 'bash'
-    args: [ 'wait_for_dag_deployed.sh', '${_COMPOSER_ENV_NAME}', '${_COMPOSER_REGION}', '${_COMPOSER_DAG_NAME}', '6', '20' ]
-    dir: '$REPO_NAME/build-pipeline'
-    id: 'wait-for-dag-deployed-on-composer'
-  - name: gcr.io/cloud-builders/gcloud
-    args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', 'trigger_dag', '--', '${_COMPOSER_DAG_NAME}', '--run_id=$BUILD_ID' ]
-    id: 'trigger-pipeline-execution'
+#  - name: gcr.io/cloud-builders/gcloud
+#    entrypoint: 'bash'
+#    args: [ 'ls -ltr']
+#    dir: '$REPO_NAME'
+#    id: 'list-dir'
+#  - name: gcr.io/cloud-builders/gcloud
+#    entrypoint: 'bash'
+#    args: [ 'ls -ltr']
+#    dir: '$REPO_NAME/workflow-dags'
+#    id: 'list-sub-dir'
+#  - name: gcr.io/cloud-builders/gsutil
+#    args: [ 'cp', '*.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
+#    dir: '$REPO_NAME/workflow-dags'
+#    id: 'deploy-processing-pipeline'
+#  - name: gcr.io/cloud-builders/gcloud
+#    entrypoint: 'bash'
+#    args: [ 'wait_for_dag_deployed.sh', '${_COMPOSER_ENV_NAME}', '${_COMPOSER_REGION}', '${_COMPOSER_DAG_NAME}', '6', '20' ]
+#    dir: '$REPO_NAME/build-pipeline'
+#    id: 'wait-for-dag-deployed-on-composer'
+#  - name: gcr.io/cloud-builders/gcloud
+#    args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', 'trigger_dag', '--', '${_COMPOSER_DAG_NAME}', '--run_id=$BUILD_ID' ]
+#    id: 'trigger-pipeline-execution'
