--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -10,8 +10,8 @@ steps:
     args: [ 'clone', 'https://github.com/arwasanawadwala/dlp-rdb-bq-import.git' ]
     id: 'check-out-source-code'
   - name: gcr.io/cloud-builders/gsutil
-    args: ['cp', 'data-pipeline-test.py', 'gs://${_DATAFLOW_JAR_BUCKET}/data-pipeline-test.py']
-    dir: '$REPO_NAME/workflow-dags'
+    args: ['cp', 'data-pipeline-test.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-builds/data-pipeline-test.py']
+    dir: '$REPO_NAME'
     id: 'deploy-processing-pipeline-old'
 #  - name: gcr.io/cloud-builders/gradle:5.6.2-jdk-8
 #    args: [ 'assemble' ]
