--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -10,7 +10,7 @@ steps:
     args: [ 'clone', 'https://github.com/arwasanawadwala/dlp-rdb-bq-import.git' ]
     id: 'check-out-source-code'
   - name: gcr.io/cloud-builders/gsutil
-    args: ['cp', 'data-pipeline-test.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-builds/data-pipeline-test.py']
+    args: ['cp', 'data_pipeline.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-builds/data_pipeline.py']
     dir: '$REPO_NAME'
     id: 'deploy-processing-pipeline-old'
 #  - name: gcr.io/cloud-builders/gradle:5.6.2-jdk-8
@@ -25,7 +25,7 @@ steps:
 #    args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}','variables', '--', '--set', 'dataflow_jar_file', 'dlp-rdb-bq-import-dataflow.jar' ]
 #    id: 'set-composer-jar-ref'
 #  - name: gcr.io/cloud-builders/gsutil
-#    args: ['cp', 'data-pipeline-test.py', 'gs://${_DATAFLOW_JAR_BUCKET}']
+#    args: ['cp', 'data_pipeline.py', 'gs://${_DATAFLOW_JAR_BUCKET}']
 #    dir: '$REPO_NAME'
 #    id: 'deploy-processing-pipeline-old'
 #  - name: gcr.io/cloud-builders/gcloud
