--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -19,13 +19,13 @@ steps:
     id: 'copy-jar'
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
-    args: [ 'ls' ]
+    args: [ '-c', 'ls' ]
     dir: '$REPO_NAME/build-pipeline'
     id: 'list-dir'
-#  - name: gcr.io/cloud-builders/gsutil
-#    args: [ 'cp', '*.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
-#    dir: '$REPO_NAME/workflow-dags'
-#    id: 'deploy-processing-pipeline'
+  #  - name: gcr.io/cloud-builders/gsutil
+  #    args: [ 'cp', '*.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
+  #    dir: '$REPO_NAME/workflow-dags'
+  #    id: 'deploy-processing-pipeline'
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
     args: [ 'wait_for_dag_deployed.sh', '${_COMPOSER_ENV_NAME}', '${_COMPOSER_REGION}', '${_COMPOSER_DAG_NAME}', '6', '20' ]
