--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -19,8 +19,8 @@ steps:
     id: 'copy-jar'
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
-    args: [ '-c', 'ls' ]
-    dir: '$REPO_NAME/build-pipeline'
+    args: [ '-c', 'ls' , 'build-pipeline']
+    dir: '$REPO_NAME'
     id: 'list-dir'
   #  - name: gcr.io/cloud-builders/gsutil
   #    args: [ 'cp', '*.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
@@ -28,7 +28,7 @@ steps:
   #    id: 'deploy-processing-pipeline'
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
-    args: [ 'wait_for_dag_deployed.sh', '${_COMPOSER_ENV_NAME}', '${_COMPOSER_REGION}', '${_COMPOSER_DAG_NAME}', '6', '20' ]
+    args: [ '-c', 'wait_for_dag_deployed.sh', '${_COMPOSER_ENV_NAME}', '${_COMPOSER_REGION}', '${_COMPOSER_DAG_NAME}', '6', '20' ]
     dir: '$REPO_NAME/build-pipeline'
     id: 'wait-for-dag-deployed-on-composer'
   - name: gcr.io/cloud-builders/gcloud
