--- a/src/build-pipeline/pipeline.yaml
+++ b/src/build-pipeline/pipeline.yaml
@@ -31,7 +31,7 @@ steps:
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
     args: [ '-c', 'ls' , 'build-pipeline' ]
-    dir: '$REPO_NAME'
+    dir: '$REPO_NAME/src'
     id: 'list-dir'
   #  - name: gcr.io/cloud-builders/gsutil
   #    args: [ 'cp', '*.py', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags' ]
@@ -40,7 +40,7 @@ steps:
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
     args: [ '-c', 'wait_for_dag_deployed.sh', '${_COMPOSER_ENV_NAME}', '${_COMPOSER_REGION}', '${_COMPOSER_DAG_NAME}', '6', '20' ]
-    dir: '$REPO_NAME/build-pipeline'
+    dir: '$REPO_NAME/src/build-pipeline'
     id: 'wait-for-dag-deployed-on-composer'
   - name: gcr.io/cloud-builders/gcloud
     args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', 'trigger_dag', '--', '${_COMPOSER_DAG_NAME}', '--run_id=$BUILD_ID' ]
