--- a/src/main/resources/fileImportConfig.yml
+++ b/src/main/resources/fileImportConfig.yml
@@ -1,7 +1,7 @@
 pipelineConfig:
   pipeline:
     source: file
-    sink: gcs
+    sink: bq
     options:
       dataSet: spike_dlp_oesc_mysql_migration
       inputFilePath: /Users/akhilghatiki/oesc/spikes/dlp-rdb-bq-import/src/main/resources/oesc_on_prem_patient.tsv
@@ -10,3 +10,4 @@ pipelineConfig:
       DLPConfigBucket: spike_oesc
       DLPConfigObject: spike_dpl_template_oesc.json
       gcsSinkBucket: gs://spike_oesc/file_import
+      tableSchemaPath: /Users/akhilghatiki/oesc/spikes/dlp-rdb-bq-import/src/main/resources/tableSchema.yml
