--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -23,7 +23,7 @@ steps:
     dir: '$REPO_NAME/workflow-dags'
     id: 'copy-dags'
   - name: gcr.io/cloud-builders/gsutil
-    args: [ 'cp', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags', 'gs://${_COMPOSER_DAG_BUCKET}' ]
+    args: [ 'cp', '-r', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-dags', 'gs://${_COMPOSER_DAG_BUCKET}' ]
     dir: '$REPO_NAME/workflow-dags'
     id: 'deploy-processing-pipeline'
   - name: gcr.io/cloud-builders/gcloud
