--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -21,6 +21,16 @@ steps:
     id: 'build-jar'
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        source env-setup/set_env.sh \
+        && ls build/libs \
+        && echo ${_DATAFLOW_JAR_BUCKET} \
+        && cp build/libs/*.jar gs://${_DATAFLOW_JAR_BUCKET}/composer-builds/dlp-rdb-bq-import-dataflow.jar
+    dir: '$REPO_NAME'
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: 'bash'
     args: [ '/workspace/set_env.sh &&', 'cp', '*.jar', 'gs://${_DATAFLOW_JAR_BUCKET}/composer-builds/dlp-rdb-bq-import-dataflow.jar' ]
     dir: '$REPO_NAME/build/libs'
     id: 'copy-jar'
