--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -20,21 +20,17 @@ steps:
     args:
       - '-c'
       - |
-        ${_GET_COMPOSER_DAG_BUCKET} > /workspace/test.txt
+        ${_GET_COMPOSER_DAG_BUCKET} > /workspace/composer_dag_bucket_path.txt \
+        && echo "{gcp_project: ${PROJECT_ID}, gcp_region: ${_COMPOSER_REGION}, gcp_zone: ${_COMPOSER_ZONE_ID},          dataflow_jar_location: ${_DATAFLOW_JAR_BUCKET}, dataflow_jar_file: dlp-rdb-bq-import-dataflow.jar, dataflow_staging_bucket: ${_DATAFLOW_STAGING_BUCKET}}" > /workspace/composer_env.json
     dir: '$REPO_NAME'
     id: 'get_composer_dag_bucket'
   - name: gcr.io/cloud-builders/gsutil
-    args: ['cp', '*.jar', 'gs://${_DATAFLOW_JAR_BUCKET}/']
+    args: [ 'cp', '*.jar', 'gs://${_DATAFLOW_JAR_BUCKET}/' ]
     dir: '$REPO_NAME/build/libs'
     id: 'deploy-jar'
   - name: gcr.io/cloud-builders/gcloud
-    args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}','variables', '--', '--i',
-        '{gcp_project=${PROJECT_ID},
-          gcp_region=${_COMPOSER_REGION},
-          gcp_zone=${_COMPOSER_ZONE_ID},
-          dataflow_jar_location=${_DATAFLOW_JAR_BUCKET},
-          dataflow_jar_file=dlp-rdb-bq-import-dataflow.jar,
-          dataflow_staging_bucket=${_DATAFLOW_STAGING_BUCKET}}' ]
+    args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}','variables', '--', '--i', '/workspace/composer_env.json'
+    ]
     id: 'set-composer-environment'
   - name: gcr.io/cloud-builders/gsutil
     args: [ 'cp', '*.py', '$(cat /workspace/test.txt)' ]
