--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -24,6 +24,9 @@ steps:
         && echo "{gcp_project: ${PROJECT_ID}, gcp_region: ${_COMPOSER_REGION}, gcp_zone: ${_COMPOSER_ZONE_ID},          dataflow_jar_location: ${_DATAFLOW_JAR_BUCKET}, dataflow_jar_file: dlp-rdb-bq-import-dataflow.jar, dataflow_staging_bucket: ${_DATAFLOW_STAGING_BUCKET}}" > /workspace/composer_env.json
     dir: '$REPO_NAME'
     id: 'get_composer_dag_bucket'
+  - name: gcr.io/cloud-builders/gcloud
+    entrypoint: 'bash'
+    args: ['-c','cat', '/workspace/composer_env.json']
   - name: gcr.io/cloud-builders/gsutil
     args: [ 'cp', '*.jar', 'gs://${_DATAFLOW_JAR_BUCKET}/' ]
     dir: '$REPO_NAME/build/libs'
@@ -33,7 +36,7 @@ steps:
     ]
     id: 'set-composer-environment'
   - name: gcr.io/cloud-builders/gsutil
-    args: [ 'cp', '*.py', '$(cat /workspace/test.txt)' ]
+    args: [ 'cp', '*.py', '$(${_GET_COMPOSER_DAG_BUCKET})' ]
     dir: '$REPO_NAME/workflow-dags'
     id: 'deploy-processing-pipeline'
   - name: gcr.io/cloud-builders/gcloud
