set source location for dag to a file instead of wildcard

--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -44,12 +44,8 @@ steps:
     args: [ 'composer', 'environments', 'update', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', '--update-env-variables=gcp_project=${PROJECT_ID},gcp_region=${_COMPOSER_REGION},gcp_zone=${_COMPOSER_ZONE_ID},dataflow_jar_location=${_DATAFLOW_JAR_BUCKET},dataflow_jar_file=dlp-rdb-bq-import-dataflow.jar,dataflow_staging_bucket=${_DATAFLOW_STAGING_BUCKET}' ]
     id: 'set-composer-environment'
   - name: gcr.io/cloud-builders/gcloud
-    args: [ 'composer', 'environments', 'storage', 'dags', 'import', '--environment', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', '--source', '*.py' ]
+    args: [ 'composer', 'environments', 'storage', 'dags', 'import', '--environment', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', '--source', 'data_pipeline.py' ]
     dir: '$REPO_NAME/workflow-dags'
-    #    id: 'set-composer-environment'
-    #  - name: gcr.io/cloud-builders/gsutil
-    #    args: [ 'cp', '*.py', 'gs://us-central1-dlp-pipeline-co-3df29c1b-bucket/dags' ]
-    #    dir: '$REPO_NAME/workflow-dags'
     id: 'deploy-processing-pipeline'
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: 'bash'
