--- a/build-pipeline/pipeline.yaml
+++ b/build-pipeline/pipeline.yaml
@@ -19,11 +19,22 @@ steps:
     dir: '$REPO_NAME/build/libs'
     id: 'deploy-jar'
   - name: gcr.io/cloud-builders/gcloud
-    args: [ 'composer', 'environments', 'update', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', '--clear-env-variables' ]
-    id: 'clear-composer-environment'
+    entrypoint: 'bash'
+    args: ['-c', 'echo { "gcp_project": "${PROJECT_ID}", \
+     "gcp_region": "${_COMPOSER_REGION}", \
+     "gcp_zone": "${_COMPOSER_ZONE_ID}", \
+     "dataflow_jar_location": "${_DATAFLOW_JAR_BUCKET}", \
+     "dataflow_jar_file": "dlp-rdb-bq-import-dataflow.jar", \
+     "dataflow_staging_bucket": "${_DATAFLOW_STAGING_BUCKET}"} > \
+      /workspace/composer_variables.json' ]
+    id: 'prepare-composer-env-json'
   - name: gcr.io/cloud-builders/gcloud
-    args: [ 'composer', 'environments', 'update', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', '--update-env-variables=gcp_project=${PROJECT_ID},gcp_region=${_COMPOSER_REGION},gcp_zone=${_COMPOSER_ZONE_ID},dataflow_jar_location=${_DATAFLOW_JAR_BUCKET},dataflow_jar_file=dlp-rdb-bq-import-dataflow.jar,dataflow_staging_bucket=${_DATAFLOW_STAGING_BUCKET}' ]
-    id: 'set-composer-environment'
+    args: [ 'composer', 'environments', 'storage', 'data', 'import', '--environment', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', '--source', '/workspace/composer_variables.json' ]
+    dir: '$REPO_NAME/env-setup'
+    id: 'copy-composer-env-json'
+  - name: gcr.io/cloud-builders/gcloud
+    args: [ 'composer', 'environments', 'run', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', 'variables', '--', '--i', '/home/airflow/gcs/data/composer_variables.json' ]
+    id: 'setup-composer-environment'
   - name: gcr.io/cloud-builders/gcloud
     args: [ 'composer', 'environments', 'storage', 'dags', 'import', '--environment', '${_COMPOSER_ENV_NAME}', '--location', '${_COMPOSER_REGION}', '--source', 'data_pipeline.py' ]
     dir: '$REPO_NAME/workflow-dags'
